[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/munro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/yellowpix.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Victory.wav" type="AudioStream" id=3]
[ext_resource path="res://Scripts/Award.gd" type="Script" id=4]
[ext_resource path="res://Sprites/BAA.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=9]
radius = 16.0

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 35.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 4.0

[sub_resource type="DynamicFont" id=11]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 1 )

[node name="BAAaward" type="Area2D"]
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
monitoring = false
collision_layer = 5
collision_mask = 5
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 9 )

[node name="CoinSprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="GoldParticle" type="Particles2D" parent="."]
emitting = false
amount = 15
lifetime = 1.75
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.2
one_shot = true

[node name="MonitorTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true
autostart = true

[node name="CoinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 20.0

[node name="Award Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -44.0
margin_right = 62.5
margin_bottom = -20.0
custom_fonts/font = SubResource( 11 )
text = "Future Award"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_BAAaward_body_entered"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_DespawnTimer_timeout"]
[connection signal="timeout" from="MonitorTimer" to="." method="_on_MonitorTimer_timeout"]
